erDiagram
    USER {
        String id PK
        String email UK
        String displayName
    }

    COMPANY {
        String id PK
        String ticker
        String companyName
    }

    WATCHLIST {
        String id PK
        String userId FK
        String companyId FK
        String status
        String priority
        String notes
        String thesisSummary
        String readiness
    }

    CHECKLIST_ITEM {
        String id PK
        String itemCode UK
        String moduleKey
        String question
        String evidenceRule
        Int displayOrder
        Int version
        Boolean isActive
    }

    USER_CHECKLIST {
        String id PK
        String userId FK
        String companyId FK
        String status
        String summary
        String readiness
        String contextSnapshot
        DateTime startedAt
        DateTime completedAt
    }

    CHECKLIST_RESULT {
        String id PK
        String userChecklistId FK
        String checklistItemId FK
        String status
        String answer
        String evidenceSnapshot
        String missingFields
        String warningCodes
        DateTime evaluatedAt
    }

    SIMULATION_SCENARIO {
        String id PK
        String userId FK
        String companyId FK
        String scenarioType
        String title
        String assumptions
        String inputSnapshot
        String outcomeSnapshot
        String reflection
        String status
        String readiness
        DateTime reviewedAt
    }

    ASSISTANT_CONVERSATION {
        String id PK
        String userId FK
        String companyId FK
        String activeModule
        String title
        String tickerContext
        DateTime createdAt
        DateTime updatedAt
    }

    ASSISTANT_MESSAGE {
        String id PK
        String conversationId FK
        String role
        String content
        String contextSnapshot
        String dataQualityContext
        String allowedNumericValues
        String sourceSummary
        String provider
        String guardrailStatus
        DateTime createdAt
    }

    USER ||--o{ WATCHLIST : owns
    COMPANY ||--o{ WATCHLIST : appears_in
    USER ||--o{ USER_CHECKLIST : performs
    COMPANY ||--o{ USER_CHECKLIST : assessed_in
    USER_CHECKLIST ||--o{ CHECKLIST_RESULT : contains
    CHECKLIST_ITEM ||--o{ CHECKLIST_RESULT : answered_by
    USER ||--o{ SIMULATION_SCENARIO : creates
    COMPANY ||--o{ SIMULATION_SCENARIO : contextualizes
    USER ||--o{ ASSISTANT_CONVERSATION : owns
    COMPANY ||--o{ ASSISTANT_CONVERSATION : contextualizes
    ASSISTANT_CONVERSATION ||--o{ ASSISTANT_MESSAGE : contains
